assets/less/frontend-forms.less
/* ... */
#wpuf-delete-msg{
    display: none;
    align-items: center;
    justify-content: space-between;
    flex: 1;
    width: 100%;
    font-weight: bold;
    margin: 5px 15px 15px;
    padding: 5px 15px 5px;
    background: #f1f1f1;
    text-align: center;
    max-height: 50px;
    border:1px solid #DAE1F5
}
#wpuf-delete-msg p{
    margin: .5em 0;padding: 2px;
}
#wpuf-delete-msg span{
    margin-top: 10px;cursor: pointer
}
.wpuf-el.terms_and_conditions  label > input[type=checkbox]{
    width: 0 !important;
}

